fix: Consertado o erro do z-index com o jogo da unity com a barra de navegação

--- a/src/Components/GameUnity/gameunity.module.scss
+++ b/src/Components/GameUnity/gameunity.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 86vh;
   align-items: center;
-  z-index: -3;
+  //z-index: -3;
 }
 
 .container > .loading-overlay {
