--- a/src/Components/Header/header.module.scss
+++ b/src/Components/Header/header.module.scss
@@ -1,3 +1,4 @@
 .header-menu {
+  position: relative;
   z-index: 3;
 }
